# doompedia

./: .gitignore  README.md
.github/workflows/: ci.yml  ios-build.yml  ios-signed-ipa.yml  release.yml
android-app/: README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
android-app/app/: build.gradle.kts  proguard-rules.pro
data-pipeline/: README.md  pyproject.toml
data-pipeline/src/doompedia_pipeline/: __init__.py  build_delta.py  build_en_1m_from_sql.py  build_featured_starter.py  build_pack.py  build_topic_subset.py  extract_dump.py  models.py  normalize.py  publish_pack.py  verify_pack.py
data-pipeline/tests/: test_build_en_1m_from_sql.py  test_build_featured_starter.py  test_delta.py  test_extract_dump.py  test_normalize.py  test_publish_pack.py
deploy/: .env.example  Caddyfile  Caddyfile.public  README.md  docker-compose.prod.yml
docs/: ATTRIBUTION_TEMPLATE.md  DATASET_BUILD_RESULT.md  DEPLOYMENT.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_STATUS.md  PLATFORM_PARITY.md  PRODUCT_DECISIONS.md  RELEASE_CHECKLIST.md  ROADMAP.md
ios-app/: README.md  project.yml
ios-app/DoompediaTests/: BasicTests.swift
scripts/: build_en_1m_pack.sh  build_en_all_pack.sh  build_en_focus_packs.sh  build_en_thematic_packs.sh  build_pack_delta.sh  deploy_pack_to_r2.sh  deploy_pack_to_s3.sh  publish_en_all_pack.sh  publish_pack.sh
shared-spec/: content-schema.sql  manifest.example.json  pack-manifest.schema.json  ranking-config.v1.json  search-spec.md
web/: app.js  index.html  styles.css
web/content/: featured_thumbnails.json
(+75 files in other folders)
