[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "doompedia-pipeline"
version = "0.1.0"
description = "Pack and delta tooling for Doompedia offline cards"
requires-python = ">=3.10"
readme = "README.md"
authors = [{name = "Doompedia Team"}]
dependencies = []

[project.scripts]
doompedia-build-pack = "doompedia_pipeline.build_pack:main"
doompedia-build-delta = "doompedia_pipeline.build_delta:main"
doompedia-extract-dump = "doompedia_pipeline.extract_dump:main"
doompedia-build-en-1m-from-sql = "doompedia_pipeline.build_en_1m_from_sql:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
